@@ -35,6 +35,7 @@
     <File name="./src/Files/MusicFile.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Files/ImageFile.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Files/GenericFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Files/PlaylistFile.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
